Task 1. Bonus 2 (pictures only) Task 2. WorkManager.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,14 @@ android {
 
 dependencies {
 
-    implementation 'com.tomerrosenfeld.customanalogclockview:custom-analog-clock-view:1.1'
+    implementation "android.arch.work:work-runtime-ktx:1.0.0-alpha11"
     implementation 'com.github.ReactiveX:RxKotlin:2.x-SNAPSHOT'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.yqritc:android-scalablevideoview:1.0.4'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
